# ege_assistant

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  start_bot.sh
ege_assistant_bot/: main.py
ege_assistant_bot/commands/: menu.py
ege_assistant_bot/common/: datetime_formats.py
ege_assistant_bot/config/: alembic.ini  config.py
ege_assistant_bot/database/: base.py  db.py  models.py
ege_assistant_bot/database/migrations/: env.py
ege_assistant_bot/database/migrations/versions/: 1a880904b645_.py
ege_assistant_bot/dispatcher/: dispatcher.py
ege_assistant_bot/handlers/: handlers.py
ege_assistant_bot/middlewares/: middlewares.py
ege_assistant_bot/state/: states.py
