[tool.poetry]
name = "ege-assistant-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.13.3"
pytz = "^2024.2"
environs = "^11.0.0"
redis = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
